Stand zum 180830: Augen funktionieren

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,39 @@ application.linux64
 application.windows32
 application.windows64
 application.macosx
+__Terminal_Processing/Archiv/p170622_Terminal/OutgoingStrings.pde
+__Terminal_Processing/Archiv/p170622_Terminal/p170622_Terminal.pde
+__Terminal_Processing/Archiv/p170622_Terminal/Servo.pde
+__Terminal_Processing/Archiv/p170628_Terminal/build/p170628_Terminal.class
+__Terminal_Processing/Archiv/p170628_Terminal/build/source/p170628_Terminal.java
+__Terminal_Processing/Archiv/p170628_Terminal/OutgoingStrings.pde
+__Terminal_Processing/Archiv/p170628_Terminal/p170628_Terminal.pde
+__Terminal_Processing/Archiv/p170628_Terminal/Servo.pde
+__Terminal_Processing/Archiv/p180427_TerminalNEW/p180427_TerminalNEW.pde
+__Terminal_Processing/Archiv/p180427_TerminalNEW_2/build/p170628_Terminal.class
+__Terminal_Processing/Archiv/p180427_TerminalNEW_2/build/source/p170628_Terminal.java
+__Terminal_Processing/Archiv/p180427_TerminalNEW_2/OutgoingStrings.pde
+__Terminal_Processing/Archiv/p180427_TerminalNEW_2/p180427_TerminalNEW_2.pde
+__Terminal_Processing/Archiv/p180427_TerminalNEW_2/Servo.pde
+__Terminal_Processing/Archiv/p180801_Terminal_Esp8266_Test2/p180801_Terminal_Esp8266_Test2.pde
+__Terminal_Processing/Archiv/p180802_Terminal_Esp8266_MyTest_pde/p180802_Terminal_Esp8266_MyTest_pde.pde
+__Terminal_Processing/Archiv/p180803_Terminal_Esp8266_Test/KeyPressed.pde
+__Terminal_Processing/Archiv/p180803_Terminal_Esp8266_Test/p180803_Terminal_Esp8266_Test.pde
+__Terminal_Processing/Archiv/p180809_Terminal/build/p170628_Terminal.class
+__Terminal_Processing/Archiv/p180809_Terminal/build/source/p170628_Terminal.java
+__Terminal_Processing/Archiv/p180809_Terminal/OutgoingStrings.pde
+__Terminal_Processing/Archiv/p180809_Terminal/p180809_Terminal.pde
+__Terminal_Processing/Archiv/p180809_Terminal/Servo.pde
+__Terminal_Processing/Archiv/p180811_ButtonPressed_Released/p180811_ButtonPressed_Released.pde
+__Terminal_Processing/Archiv/p180811_Terminal/build/p170628_Terminal.class
+__Terminal_Processing/Archiv/p180811_Terminal/build/source/p170628_Terminal.java
+__Terminal_Processing/Archiv/p180811_Terminal/data/DC_Arrow_Left.png
+__Terminal_Processing/Archiv/p180811_Terminal/data/DC_Arrow_Left_Active.png
+__Terminal_Processing/Archiv/p180811_Terminal/data/DC_Arrow_Right.png
+__Terminal_Processing/Archiv/p180811_Terminal/data/DC_Arrow_Right_Active.png
+__Terminal_Processing/Archiv/p180811_Terminal/OutgoingStrings.pde
+__Terminal_Processing/Archiv/p180811_Terminal/p180811_Terminal.pde
+__Terminal_Processing/Archiv/p180811_Terminal/Servo.pde
+__Terminal_Processing/Archiv/p183107_Terminal_Esp8266_Test/KeyPressed.pde
+__Terminal_Processing/Archiv/p183107_Terminal_Esp8266_Test/p183107_Terminal_Esp8266_Test.pde
+__Terminal_Processing/Archiv/sketch_180508_Terminal_Rebuid_1/sketch_180508_Terminal_Rebuid_1.pde
